mudei nome porque tava dando erro no publish do npm com nome padrao expo-settings

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-settings",
+  "name": "blix-expo-settings",
   "version": "0.1.0",
   "description": "LiveStream",
   "main": "build/index.js",
