--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blix-expo-settings",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "LiveStream",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -29,6 +29,7 @@
   "license": "MIT",
   "homepage": "https://github.com/BlixTechnology/expo-settings#readme",
   "devDependencies": {
+    "@react-native-community/cli-server-api": "^20.1.1",
     "@types/react": "~19.0.0",
     "expo": "^50.0.21",
     "expo-module-scripts": "^4.1.7",
@@ -38,5 +39,8 @@
     "expo": "*",
     "react": "*",
     "react-native": "*"
+  },
+  "dependencies": {
+    "expo-dev-client": "~3.3.12"
   }
 }
